pkg/lang/testdata/ub/inputs/invalid/enum-nested-members.ub
inputs: {
  spec: {
    type: object({
      proto: { type: string, enum: [tcp] },
    })
  }
}
